Fix: nav overflowing

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -127,38 +127,6 @@ body {
     margin: 0;
     padding: 0;
 }
-.off-screen-menu {
-    background-color:  rgb(34, 37, 49);
-    height: 100vh;
-    width: 100%;
-    max-width: 450px;
-    position: fixed;
-    top: 0;
-    right: -450px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;    
-    justify-content: center;
-    text-align: center;
-    font-size: 3rem;
-    transition: .3s ease;
-}
-.off-screen-menu.active {
-    right: 0;
-}
-
-
-
-/* nav */
-nav {
-    padding: 1rem;
-    display: flex;
-    background-color: rgb(34, 37, 49);
-    width: 100%; 
-   
-}
-
-
 
 /* ham menu */
 .menu {
